# WLPP

./: .gitignore  meson.build  meson_options.txt  readme.md
include/: event.hpp  window.hpp
include/WL/: wl.hpp
include/platform/linux/: x11_window.hpp
include/window/: properties.hpp
src/: window.cpp
src/platform/linux/: x11_window.cpp
tests/: keyboard.cpp  mouse.cpp  window.cpp
